Issue#54 create dashboard homepage (#306)
* add kpis for home page

* add new translation

* add cards kpis

* add center cards

* add new css rule margin and flex column

* move kpi function to helper

* add kpis method to herlper

* add new locales translations

* update dashboard

* update dashboard

* fix translation error

* new dashboard version, fix link

* add button for adding data

* add new translations

* change translation for vehicle usage set in kpi

* add space between title and add button

---------

Co-authored-by: mahdi lamriben <mehdilmbn@gmail.com>

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -586,6 +586,7 @@ en:
           neutral: Neutral
       zoning:
         name: Name
+        updated_at: Updated
       zone:
         vehicle: Vehicle
         name: Name
@@ -862,6 +863,39 @@ en:
         success: Users deleted successfully
       send_email:
         success: E-Mail sent to user successfully
+      kpi:
+        format: '%b %d, %Y'
+        actions: Actions
+        plannings:
+          last: Plans
+          none: No plan
+          create: Create plan
+          show: See the full list (%{count})
+          add: + New plan
+        zonings:
+          last: Sectorisations
+          none: No sectorisation
+          create: Create sectorisation
+          show: See the full list (%{count})
+          add: + New sectorisation
+        destinations:
+          last: Addresses
+          import: Import
+          export: Export
+          show: See all
+          add: + New address
+        stores:
+          last: Sites
+          none: No site
+          create: Create site
+          show: See the full list (%{count})
+          add: + New site
+        vehicles:
+          last: Fleet
+          none: No vehicle settings
+          create: Create vehicle settings
+          show: See the full list (%{count})
+          add: + New vehicle settings
     vehicles:
       devices:
         create_company: Initialize Cartoway Field Account
