Edit lateness from optimization modal

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -203,8 +203,8 @@ fr:
         print_stop_time: Inclure les horaires de passage
         print_barcode: Code barre
         speed_multiplier: Ajustement de la vitesse
-        stop_max_upper_bound: Retard max / arrêts
-        vehicle_max_upper_bound: Retard max / véhicules
+        stop_max_upper_bound: Retard max créneaux horaires visites
+        vehicle_max_upper_bound: Dépassement max amplitude chauffeur
         router: Calculateur d'itinéraire
         router_warning: Ce calculateur d'itinéraire n'est pas autorisé dans ce profil
         layer_warning: Ce fond de carte n'est pas autorisé dans ce profil
@@ -1094,10 +1094,10 @@ fr:
       optimization_force_start_help: Forcer le départ du véhicule à son horaire de début.
       enable_optimization_soft_upper_bound_help: Autoriser les retards durant l'optimisation
       enable_global_optimization_test: Actif si Test
-      stop_max_upper_bound: Retard max / arrêts
+      stop_max_upper_bound: Retard max créneaux horaires visites
       stop_max_upper_bound_help: Autoriser les retards sur les arrêts
-      vehicle_max_upper_bound: Retard max / véhicules
-      vehicle_max_upper_bound_help: Autoriser les retards sur les véhicules
+      vehicle_max_upper_bound: Dépassement max amplitude chauffeur
+      vehicle_max_upper_bound_help: Autoriser les dépassements horaires sur les tournées
       print_header_help: Bloc de texte ajouté avant chaque tournée
       print:
         title: Impressions
@@ -2120,6 +2120,13 @@ fr:
             Attention : Les arrêts non assignés seront affectés à un véhicule
             durant l'optimisation. Si ce comportement n'est pas souhaité,
             veuillez les verrouiller.
+          enable_soft_upper_bound: Autoriser les retards
+          enable_optimization_soft_upper_bound_true_help: >-
+            Autoriser les retards
+          enable_optimization_soft_upper_bound_false_help: >-
+            Interdire les retards
+          vehicle_max_upper_bound: 'Hors amplitude chauffeur'
+          stop_max_upper_bound: 'Retard créneaux visites'
         optimizer:
           title: Optimisation
           in_progress: 'Processus en cours, merci de patienter.'
