--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -203,8 +203,8 @@ en:
         print_stop_time: Include stop time
         print_barcode: Barcode
         speed_multiplier: Speed multiplier
-        stop_max_upper_bound: Stops maximum delay
-        vehicle_max_upper_bound: Vehicles maximum delay
+        stop_max_upper_bound: Visit outside time window
+        vehicle_max_upper_bound: Driver outside work shift
         router: Routing Engine
         router_warning: This routing engine is unauthorized in this profile
         layer_warning: This layer is unauthorized in this profile
@@ -1063,10 +1063,10 @@ en:
       optimization_force_start_help: Force vehicle start to the beginning of its schedule.
       enable_optimization_soft_upper_bound_help: Enable the delays in optimization
       enable_global_optimization_test: Enabled if Test
-      stop_max_upper_bound: Stops maximum delay
-      stop_max_upper_bound_help: Enable delays for stops
-      vehicle_max_upper_bound: Vehicles maximum delay
-      vehicle_max_upper_bound_help: Enable delays for vehicles
+      stop_max_upper_bound: Visit outside time window
+      stop_max_upper_bound_help: Allow stop lateness
+      vehicle_max_upper_bound: Driver outside work shift
+      vehicle_max_upper_bound_help: Authorise overtime on routes
       print_header_help: Block of text added before each route
       print:
         title: Printing
@@ -2021,6 +2021,13 @@ en:
             Warning: all non planned destination will be assigned to vehicles
             during optimisation process. If you do not want this to happen,
             please lock ( <i class="fa fa-lock" ></i> ) unplanned destination.
+          enable_soft_upper_bound: Allow lateness
+          enable_optimization_soft_upper_bound_true_help: >-
+            Allow lateness
+          enable_optimization_soft_upper_bound_false_help: >-
+            Deny lateness
+          vehicle_max_upper_bound: 'Driver outside work shift'
+          stop_max_upper_bound: 'Visit outside time window'
         optimizer:
           title: Optimization
           in_progress: 'Please wait, processing.'
